Use outputanalyzer